First attempt to get MedDRA up and running. Will have improvements to ProjectHandlers and proper project definition (rather than repurpose old 'Demo' use case.